PostGIS 3.1.11dev
xxxx/xx/xx

* Bug Fixes *
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)


PostGIS 3.1.10
2023/11/19

* Bug Fixes *
  - #5568, Improve robustness of topology face split handling (Sandro Santilli)
  - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
           (Sandro Santilli)
  - #5450, Fix macro expansion recursion on powerpc architectures
           (Bas Couwenberg)
  - #5385, Postgres malloc assertion fail when using pg_cancel_backend
           with ST_AsMVT (Regina Obe, Paul Ramsey)
 - Fix JsonB casting issue (Paul Ramsey)
 - #5616, Fix to find docbook on newer docbook installs (Regina Obe)


* Breaking Changes *
  - #5385, Take out interruptability of ST_AsMVT
    as it causes backend crash under intense conditions
    (Regina Obe, Paul Ramsey)

PostGIS 3.1.9
2023/05/29

* Bug Fixes
  - #5384, Fix crash in ST_AsGML when given id is longer than given prefix
           (Sandro Santilli)
  - #5380, Fix 2.5 upgrades with views using geography based ST_Distance
           (Sandro Santilli)
  - #5338, Dump/Restore of raster table fails on
           enforce_coverage_tile_rast constraint (Regina Obe)
  - #5315, #5318, #5319, #5320, #5342 crashes on infinite coordinates
          (Regina Obe, Paul Ramsey)
  - #5344, Include topology id sequence state in dumps (Sandro Santilli)
  - #5288, ST_LineCrossingDirection multi-cross error (Paul Ramsey)
  - #5347, _ST_BestSRID crashes on ARM with infinite geometries (Regina Obe)
  - #5331, [postgis_tiger_geocoder] reverse_geocode, prefer addressable ranges
           (Regina Obe, Locance)


PostGIS 3.1.8
2022/11/12

* Bug and Security Fixes
  - [security] Add schema qual to upgrade util (Regina Obe)