@@ -7,6 +7,7 @@ xxxx/xx/xx
  - #5627, Handling of EMPTY components in PiP check (Paul Ramsey)
  - #5604, Handle distance between collections with empty elements (Paul Ramsey)
  - #5635, Handle NaN points in ST_Split (Regina Obe)
+ - Logic error in ST_Covers(geography) (Paul Ramsey)
 
 
 PostGIS 3.1.10
